# Sirius

./: .gitmodules  CMakeLists.txt  LICENSE  switch.sh
build-Linux/: CMakeCache.txt  Makefile  Sirius  cmake_install.cmake  imgui.ini  setup_pocl_env.sh
build-Linux/pocl-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestCustom.cmake  CTestTestfile.cmake  Makefile  cl_offline_compiler.sh  cmake_install.cmake  compile_commands.json  compile_test_DNQfO.bc  compile_test_GTCJg  compile_test_HN4QT.bc  compile_test_SpNOn.bc  compile_test_YRRzy.bc  compile_test_bxLbt  compile_test_dd7Gv.bc  compile_test_k2P5d.bc  compile_test_oJXOv.bc  compile_test_suG6O.bc  compile_test_tA18A.bc  compile_test_tzDuh.bc  compile_test_wzZne.bc  compile_test_yu9NR.bc  config.h  config2.h  install_manifest.txt  kernellib_hash.h  pocl.icd  pocl_build_timestamp.h  pocl_opencl.h  pocl_version.h
build-Linux/pocl-build/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/CL/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libpocl.so.2.14.0
build-Linux/pocl-build/lib/CL/devices/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/CL/devices/basic/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/CL/devices/cpu_dbk/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/kernel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/lib/kernel/host/: CTestTestfile.cmake  Makefile  cmake_install.cmake  partial-x86_64-pc-linux-gnu-znver4-0.bc  partial-x86_64-pc-linux-gnu-znver4-120.bc  partial-x86_64-pc-linux-gnu-znver4-160.bc
build-Linux/pocl-build/lib/llvmopencl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-build/ocl-vendors/: pocl-tests.icd
build-Linux/pocl-build/poclu/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-Linux/pocl-install/lib/: libpocl.so.2  libpocl.so.2.14.0
build-Linux/pocl-install/lib/pkgconfig/: pocl.pc
build-Linux/pocl_external-prefix/src/pocl_external-stamp/: pocl_external-source_dirinfo.txt
build-Linux/pocl_external-prefix/tmp/: pocl_external-cfgcmd.txt  pocl_external-mkdirs.cmake
build-Windows/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MinkowskiMetric.vcxproj  MinkowskiMetric.vcxproj.filters  Sirius.sln  Sirius.vcxproj  Sirius.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-Windows/MinkowskiMetric.dir/Release/: MinkowskiMetric.dll.recipe
build-Windows/MinkowskiMetric.dir/Release/MinkowskiMetric.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  MinkowskiMetric.lastbuildstate  link.command.1.tlog  link.write.1.tlog
build-Windows/Sirius.dir/Release/Sirius.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-Windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-Windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-linux/: CMakeCache.txt  Makefile  Sirius  cmake_install.cmake  imgui.ini
build-linux/pocl-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestCustom.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  compile_test_0xjzC.bc  compile_test_C1RWm  compile_test_GqaCS.bc  compile_test_JlfmL.bc  compile_test_fuNNx.bc  compile_test_j7MGU.bc  compile_test_nKDWE.bc  config.h  install_manifest.txt  pocl.pc  pocl_build_timestamp.h  sleef_config_temp_znver4.h.new
build-linux/pocl-build/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-build/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-build/lib/CL/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libOpenCL.so.2.14.0
build-linux/pocl-build/lib/CL/devices/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-build/lib/kernel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-build/lib/kernel/host/: CTestTestfile.cmake  Makefile  cmake_install.cmake  partial-x86_64-pc-linux-gnu-znver4-40.bc  partial-x86_64-pc-linux-gnu-znver4-80.bc
build-linux/pocl-build/lib/llvmopencl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-build/poclu/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/pocl-install/lib/: libOpenCL.so.2.14.0
build-linux/pocl_external-prefix/tmp/: pocl_external-cfgcmd.txt  pocl_external-mkdirs.cmake
build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MinkowskiMetric.vcxproj  MinkowskiMetric.vcxproj.filters  Sirius.sln  Sirius.vcxproj  Sirius.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-windows/MinkowskiMetric.dir/Release/: MinkowskiMetric.dll.recipe
build-windows/MinkowskiMetric.dir/Release/MinkowskiMetric.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog
build-windows/Sirius.dir/Release/Sirius.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog
build-windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
kernels/: raytracer.cl
plugins/Minkowski/: MinkowskiMetric.h
plugins/minkowski /: MinkowskiMetric.cpp
src/: main.cpp
src/Core/: Application.cpp  Application.h  Config.h  PluginManager.cpp  PluginManager.h  Window.cpp  Window.h
src/Graphics/: Renderer.cpp  Renderer.h
src/Math/: Dual.h  Quaternion.h  Vec.h
src/Physics/: IMetric.h
src/UI/: UIManager.cpp  UIManager.h
src/core/: Window.cpp  Window.hpp
src/hal/: OpenCLContext.cpp  OpenCLContext.hpp
src/ui/: ImGuiLayer.cpp  ImGuiLayer.hpp
(+233 files in other folders)
